@@ -224,7 +224,11 @@ function wfSpecialContributions( $par = null ) {
 	}
 	$talk = $nt->getTalkPage();
 	if( $talk ) {
-		$ul .= ' (' . $sk->makeLinkObj( $talk, $wgLang->getNsText( NS_TALK ) ) . ')';
+		$ul .= ' (' . $sk->makeLinkObj( $talk, $wgLang->getNsText( NS_TALK ) );
+		if( $wgUser->isAllowed( 'block' ) ) {
+			$ul .= ' | ' . $sk->makeLinkObj( Title::makeTitle( NS_SPECIAL, 'Blockip/' . $nt->getText() ), wfMsgHtml( 'blocklink' ) );
+		}
+		$ul .= ')';
 	}
 
 	if ($target == 'newbies') {
