@@ -329,6 +329,7 @@ Special Pages:
 * Move parentheses out of <a> link in Special:Contributions
 * (bug 3192): properly check 'limit' parameter on Special:Contributions
 * (bug 3187) watchlist text refer to unexistent "Stop watching" action
+* Add block link to Special:Contributions
 
 Misc.:
 * PHP 4.1 compatibility fix: don't use new_link parameter to mysql_connect
